# nsfdpy

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  Sanitizers.cmake  noxfile.py  pyproject.toml  setup.py  siam_1.9780898719703.bib
app/: libnsfd.py  scalar_field.py  vector_field.py
docs/: c-api.rst  conf.py  equations.rst  index.rst  parameters.rst  refs.bib
docs/api/: nsfd.rst
include/: nsfd.h
notebooks/: cavity.ipynb  cavity.yml  couette.ipynb  couette.yml  fields.ipynb  grid.ipynb  grid_geometry.ipynb  scalar_field.ipynb
notes/: parameters.md
nsfd/: __init__.py  field.py  grid.py  libnsfd.py
src/: nsfd.c  nsfd_field.c  nsfd_field.test.cpp  nsfd_field_internal.h  nsfd_grid.c  nsfd_grid.test.cpp  nsfd_grid_internal.h  nsfd_internal.h  nsfd_mem.h
src/nsfd/: boundary.py  grid.py  main.py  uvp.py
src/nsfdpy/: __init__.py  _nsfd.cpp  bcond.py  bind_config.cpp  bind_geom.cpp  bind_iterpressure.cpp  bind_scalar.cpp  bind_vector.cpp  bindings.hpp  comp.py  config.py  field.py  geom.py  grid.py  interp.py  iterpressure.py  nsfd.py  ops.py  plot.py  pymem.py  solver.py  time.py  typing.py  values.py
src/nsfdpy/bcond/: bind_apply.cpp  bind_apply_bcond.cpp  bind_bc_data.cpp  bind_bc_type.cpp  bind_data.cpp
src/nsfdpy/comp/: bind_fg.cpp  bind_rhs.cpp  bind_time_step.cpp  bind_u_next.cpp
src/nsfdpy/field/: bind_scalar.cpp  bind_vector.cpp
src/nsfdpy/grid/: bind_axis.cpp  bind_grid.cpp  bind_staggered.cpp
src/nsfdpy/ops/: bind_advection.cpp  bind_gradient.cpp  bind_laplace.cpp  bind_laplacian.cpp
