[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsfdpy"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "Marian Domanski", email = "shrieks.walnut.0s@icloud.com" }]
license.file = "LICENSE"
dependencies = ["matplotlib", "numpy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["mypy", "nox"]
nb = ["notebook", "ipykernel"]
