[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[project]
name = "nsfdpy"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "Marian Domanski", email = "shrieks.walnut.0s@icloud.com" }]
license.file = "LICENSE"
dependencies = ["matplotlib", "numpy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["mypy", "nox"]
nb = ["notebook", "ipykernel"]

[tool.mypy]
disallow_untyped_defs = true
files = "src"
python_version = "3.13"
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
ignore_missing_imports = true
warn_unreachable = true
warn_return_any = true
strict = true
